--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
         "custom": "ignore"
       }
     ],
-    "react/jsx-curly-spacing": [2, "never"]
+    "react/jsx-curly-spacing": [2, "never"],
+    "import/no-named-as-default": "off"
   },
   "settings": { "import/resolver": { "node": { "paths": ["src"] } } }
 }
