--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
       }
     ],
     "react/jsx-curly-spacing": [2, "never"],
-    "import/no-named-as-default": "off"
+    "import/no-named-as-default": "off",
+    "no-param-reassign": "off"
   },
   "settings": { "import/resolver": { "node": { "paths": ["src"] } } }
 }
