--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 REACT_APP_API="https://api.fastinvitation.com/api"
 REACT_APP_API_LOGIN="https://api.fastinvitation.com/api/Auth/login"
 REACT_APP_API_REGISTER="https://api.fastinvitation.com/api/Auth/register"
+REACT_APP_ETSY_AUTH="https://www.etsy.com/oauth/connect?response_type=code&redirect_uri=localhost:3000/dashboard&scope=listings_r%20listings_w%20shops_r%20listings_d%20address_r&client_id=3rn1iq6z9vglcw4e1vu9u43n&state=superstate&code_challenge={code_chall}&code_challenge_method=S256"
+
+
