--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "axios": "^1.3.2",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
+    "install": "^0.13.0",
+    "npm": "^9.5.1",
+    "pkce-challenge": "^3.0.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-chartjs-2": "3.0.4",
